styles.css
/* Variables */
:root {
/* COLORS */
/* dark shades of primary color*/
--dark-cyan: hsl(185, 75%, 39%);
--dark-desaturated-blue: hsl(229, 23%, 23%);
--dark-grayish-blue: hsl(227, 10%, 46%);
--dark-gray: hsl(0, 0%, 59%);

--clr-primary-1: hsl(205, 86%, 17%);
--clr-primary-2: hsl(205, 77%, 27%);
--clr-primary-3: hsl(205, 72%, 37%);
--clr-primary-4: hsl(205, 63%, 48%);
/* primary/main color */
--clr-primary-5: hsl(205, 78%, 60%);
/* lighter shades of primary color */
--clr-primary-6: hsl(205, 89%, 70%);
--clr-primary-7: hsl(205, 90%, 76%);
--clr-primary-8: hsl(205, 86%, 81%);
--clr-primary-9: hsl(205, 90%, 88%);
--clr-primary-10: hsl(205, 100%, 96%);
/* darkest grey - used for headings */
--clr-grey-1: hsl(209, 61%, 16%);
--clr-grey-2: hsl(211, 39%, 23%);
--clr-grey-3: hsl(209, 34%, 30%);
--clr-grey-4: hsl(209, 28%, 39%);
/* grey used for paragraphs */
--clr-grey-5: hsl(210, 22%, 49%);
--clr-grey-6: hsl(209, 23%, 60%);
--clr-grey-7: hsl(211, 27%, 70%);
--clr-grey-8: hsl(210, 31%, 80%);
--clr-grey-9: hsl(212, 33%, 89%);
--clr-grey-10: hsl(210, 36%, 96%);
--clr-white: #fff;
--clr-red-dark: hsl(360, 67%, 44%);
--clr-red-light: hsl(360, 71%, 66%);
--clr-green-dark: hsl(125, 67%, 44%);
--clr-green-light: hsl(125, 71%, 66%);
--clr-black: #222;
/*    FONTS    */
--ff-primary: 'Roboto', sans-serif;
--ff-secondary: 'Open Sans', sans-serif;
--fs-name-stats: 18px;
--ff-kumbh: 'Kumbh Sans',sans-serif;
--fw-400: 400;
--fw-700: 700;
--transition: all 0.2s linear;
--spacing: 0.3rem;
--radius: 15px;
--light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
--dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
--max-width: 1170px;
--fixed-width: 620px;
}

/* Global Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    width: 100%;
    height: 100%;
}


/* MOBILE DESIGN */

body {
    width: 100%;
    height: 100%;
    font-size: 18px;
    overflow: hidden;
}

main {
    z-index: 100;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--dark-cyan);
}

/* Background-patterns */

#bg-top {
    position: absolute;
    transform: translate(-70%,-70%);


}
#bg-bottom{
    position: absolute;
    transform: translate(15%, 40%);

}

/* Card */
.container {
    z-index: 1000;
    max-width: 350px;
    width: 90%;
    height: auto;
    margin: 1rem;
    background-color: var(--clr-white);
    border-radius: var(--radius);
    box-shadow: var(--dark-shadow);
}

/* Top Card Pattern */
.card-pattern {
    width: 100%;
    height: 140px;
    border-top-left-radius: var(--radius);
    border-top-right-radius: var(--radius);
    background-image: url(./images/bg-pattern-card.svg);
}


/*  Profile Image */
.image-container {
    display: flex;
    justify-content: center;
}
#profile-image {
    border-radius: 50%;
    border: 5px solid white;
    transform: translateY(-50%);
}

/* Text Section */
.text-section {
    width: 100%;
}

/*  Heading */
.heading {
    display: flex;
    justify-content: center;
    position: relative;
    bottom: 2rem;
}
.name {
    font-size: var(--fs-name-stats);
    font-family: var(--ff-kumbh);
    font-weight: var(--fw-700);
    margin: var(--spacing);
}
.age {
    font-weight: var(--fw-400);
    color: var(--dark-grayish-blue);
    margin: var(--spacing);
}
.city {
    text-align: center;
    position: relative;
    bottom: 1.5rem;
    font-size: 16px;
    color: var(--dark-grayish-blue);
    font-weight: var(--fw-400);
}

/* Horizontal line */
.line {
    width: 100%;
    height:1px;
    background-color: var(--dark-gray);
    opacity: 0.3;
}

/* Stats section */
.stats {
    display: flex;
    justify-content: space-evenly;
    padding: 2rem 0;
}
.stat-section {
    text-align: center;
}
.num-stat {
    font-family: var(--ff-kumbh);
    font-weight: var(--fw-700);
    font-size: var(--fs-name-stats);
}
.stat-description {
    font-family: var(--ff-kumbh);
    font-weight: var(--fw-400);
    font-size: 14px;
    color: var(--dark-grayish-blue);
    margin: 0.5rem;
}


/* DESKTOP DESIGN */
@media (min-width: 750px) {
    #bg-top {
        transform: translate(-30%, -70%);
    }
    #bg-bottom {
        transform: translate(70%,30%);
    }
}

/* Attribution */
.attribution { font-size: 11px; text-align: center; }
.attribution a { color:var(--clr-white); }

